--- a/templates/careers.html
+++ b/templates/careers.html
@@ -8,13 +8,13 @@
     <link href="{% static 'css/tailwind.min.css' %}" rel="stylesheet">
 </head>
 <body class="bg-gray-100">
-    <header class="sticky top-0 flex justify-between items-center border-b-2 border-amber-950 px-6 py-4 bg-white">
+    <header class="sticky top-0 flex flex-col space-x-4 md:flex-row justify-between items-center border-b-2 border-amber-950 px-6 py-4 bg-white">
         <div class="flex items-center space-x-2">
             <img src="{% static 'images/logo.jpeg' %}" alt="Logo" class="h-10 w-10"> 
-            <h1 class="text-3xl bg-white font-serif pl-11">RASHTRIYA ISPAT NIGAM LIMITED</h1>
+            <h1 class="text-xl md:text-3xl bg-white font-serif pl-11">RASHTRIYA ISPAT NIGAM LIMITED</h1>
         </div>
     
-        <div class="flex space-x-6 mr-16">
+        <div class="flex space-x-7 md:pr-12 mt-4 md:mt-0">
             {% if request.path == '/' %}
             <a href="{% url 'home' %}" class="text-lg text-yellow-500 underline">Home</a>
             {%else%}
@@ -36,14 +36,23 @@
             <a href="{% url 'aboutus' %}" class="text-lg text-zinc-500">AboutUs</a>
             {%endif%}
             {% if user.is_authenticated %}
-            <a href="{% url 'profile'%}">
-                <img src="{% static 'images/profileicon.jpeg'%}" alt="Profile" class="w-8 h-8 rounded-full border-2 border-gray-300">
-            </a>
+            <button class="hamburger"> ☰ </button>
+            <div class="dropdown hidden flex flex-col absolute top-32 right-4  md:top-10 md:right-4 border-2 border-gray-400 text-zinc-500 rounded-xl bg-white shadow-lg">
+                <a href="{% url 'profile' %}" class="py-2 px-4 cursor-pointer rounded-xl hover:border hover:border-black hover:bg-gray-100">Profile</a>
+                <a href="{% url 'profile' %}" class="py-2 px-4 cursor-pointer rounded-xl hover:bg-gray-100 hover:border hover:border-black">Orders</a>
+                <a href="{% url 'logout' %}" class="py-2 px-4 cursor-pointer rounded-xl hover:bg-gray-100 hover:border hover:border-black">Logout</a>
+            </div>
+            
             {% else %}
-                <a class="mr-14 bg-white text-lg rounded-lg hover:text-yellow-500 animate-bounce" href="{% url 'login' %}?next={{ request.path }}">Login</a>
+                <a class="mr-14 bg-white text-lg rounded-lg hover:text-yellow-500" href="{% url 'login' %}?next={{ request.path }}">Login</a>
             {% endif %}
         </div>
     </header>
+    <script>
+        document.querySelector(".hamburger").addEventListener("click",()=>{
+            document.querySelector(".dropdown").classList.toggle("hidden");
+        });
+    </script>
     <main class="container mx-auto p-4">
         <section class="mb-8">
             <h2 class="text-2xl font-semibold mb-4 text-brown-900">Why Work With Us?</h2>
@@ -63,7 +72,7 @@
             </div>
         </section>
     </main>
-    <footer class="bg-brown-900 text-yellow-500 p-4 text-center">
+    <footer class="mt-96 bg-brown-900 text-yellow-500 p-4 text-center">
         <p>&copy; 2023 Our Company. All rights reserved.</p>
     </footer>
 </body>
