--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <h1 class="text-xl md:text-3xl bg-white font-serif pl-11">RASHTRIYA ISPAT NIGAM LIMITED</h1>
         </div>
     
-        <div class="flex space-x-7 md:pr-12 mt-4 md:mt-0">
+        <div class="flex space-x-4 md:space-x-7 md:pr-12 mt-4 md:mt-0">
             {% if request.path == '/' %}
             <a href="{% url 'home' %}" class="text-lg text-yellow-500 underline">Home</a>
             {%else%}
