--- a/templates/home.html
+++ b/templates/home.html
@@ -11,29 +11,29 @@
     <header class="sticky top-0 flex flex-col space-x-4 md:flex-row justify-between items-center border-b-2 border-amber-950 px-6 py-4 bg-white">
         <div class="flex items-center space-x-2">
             <img src="{% static 'images/logo.jpeg' %}" alt="Logo" class="h-10 w-10"> 
-            <h1 class="text-[50px] md:text-3xl bg-white font-serif pl-11">RASHTRIYA ISPAT NIGAM LIMITED</h1>
+            <h1 class="text-[50px] md:text-3xl bg-white font-serif pl-4 md:pl-11">RASHTRIYA ISPAT NIGAM LIMITED</h1>
         </div>
     
-        <div class="flex space-x-4 md:space-x-7 pr-2 md:pr-12 mt-4 md:mt-0">
+        <div class="flex space-x-7 pr-4 md:pr-12 mt-4 md:mt-0">
             {% if request.path == '/' %}
-            <a href="{% url 'home' %}" class="text-lg text-yellow-500 underline">Home</a>
+            <a href="{% url 'home' %}" class="text-[10px] md:text-lg text-yellow-500 underline">Home</a>
             {%else%}
-            <a href="{% url 'home' %}" class="text-lg text-zinc-500">Home</a>
+            <a href="{% url 'home' %}" class="text-[10px] md:text-lg text-zinc-500">Home</a>
             {%endif%}
             {% if request.path == '/products/' %}
-            <a href="{% url 'products' %}" class="text-lg text-yellow-500 underline">Products</a>
+            <a href="{% url 'products' %}" class="text-[10px] md:text-lg text-yellow-500 underline">Products</a>
             {%else%}
-            <a href="{% url 'products' %}" class="text-lg text-zinc-500">Products</a>
+            <a href="{% url 'products' %}" class="text-[10px] md:text-lg text-zinc-500">Products</a>
             {%endif%}
             {% if request.path == '/careers/' %}
-            <a href="{% url 'careers' %}" class="text-lg text-yellow-500 underline">Careers</a>
+            <a href="{% url 'careers' %}" class="text-[10px] md:text-lg text-yellow-500 underline">Careers</a>
             {%else%}
-            <a href="{% url 'careers' %}" class="text-lg text-zinc-500">Careers</a>
+            <a href="{% url 'careers' %}" class="text-[10px] md:text-lg text-zinc-500">Careers</a>
             {%endif%}
             {% if request.path == '/aboutus/' %}
-            <a href="{% url 'aboutus' %}" class="text-lg text-yellow-500 underline">AboutUs</a>
+            <a href="{% url 'aboutus' %}" class="text-[10px] md:text-lg text-yellow-500 underline">AboutUs</a>
             {%else%}
-            <a href="{% url 'aboutus' %}" class="text-lg text-zinc-500">AboutUs</a>
+            <a href="{% url 'aboutus' %}" class="text-[10px] md:text-lg text-zinc-500">AboutUs</a>
             {%endif%}
             {% if user.is_authenticated %}
             <button class="hamburger"> ☰ </button>
@@ -63,7 +63,7 @@
                 </p>
             </div>
             
-            <div class="mt-14 text-blue-400 space-y-4">
+            <div class="m-14 space-y-4">
                 <div>
                 Rashtriya Ispat Nigam Limited
                 </div>
