--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,25 +7,27 @@
     <title>My Profile</title>
     <link href="{% static 'css/tailwind.min.css' %}" rel="stylesheet">
 </head>
-<body>
-    <h2>My Profile</h2>
-    <table border="1">
-        <tr>
-            <th>Username</th>
-            <td>{{ user.user.username }}</td>
-        </tr>
-        <tr>
-            <th>Email</th>
-            <td>{{ user.user.email }}</td>
-        </tr>
-        <tr>
-            <th>User Type</th>
-            <td>{{ user.get_user_type_display }}</td>  <!-- Displays 'Admin' or 'Marketing' -->
-        </tr>
-        <tr>
-            <th>Phone Number</th>
-            <td>{{ user.phone_no|default:"Not Provided" }}</td>
-        </tr>
-    </table>
+<body class="bg-white flex items-center justify-center">
+    <div class="bg-white p-10 w-full rounded-xl">
+        <h2 class="text-2xl font-bold text-gray-800 p-5 mb-4">My Profile</h2>
+        <table class="w-full border  bg-green-900 rounded-xl">
+            <tr class="bg-green-900 text-white">
+                <th class="border border-black px-8 py-4 text-left">Username</th>
+                <td class="border border-black px-8 py-4">{{ user.user.username }}</td>
+            </tr>
+            <tr class="bg-green-900 text-white">
+                <th class="border border-black px-8 py-4 text-left">Email</th>
+                <td class="border border-black px-8 py-4">{{ user.user.email }}</td>
+            </tr>
+            <tr class=" bg-green-900 text-white">
+                <th class="border border-black px-8 py-4 text-left">User Type</th>
+                <td class="border border-black px-8 py-4">{{ user.get_user_type_display }}</td>
+            </tr>
+            <tr class="bg-green-900 text-white">
+                <th class="border border-black px-8 py-4 text-left">Phone Number</th>
+                <td class="border border-black px-8 py-4">{{ user.phone_no|default:"Not Provided" }}</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
